swithc to java 11 and typo erro fix