@@ -3,17 +3,17 @@ package ynov.smartorder.api.web.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import smartorder.alison_api.web.dtos.ReservationDto;
-import ynov.smartorder.api.domain.models.Reservation;
+import ynov.smartorder.api.web.apis.ReservationsApi;
 import ynov.smartorder.api.domain.ports.ReservationPort;
-import smartorder.alison_api.web.apis.ReservationsApi;
 import ynov.smartorder.api.persistence.repository.MealRepository;
 import ynov.smartorder.api.persistence.repository.ReservationRepository;
+import ynov.smartorder.api.web.dtos.ReservationDto;
 import ynov.smartorder.api.web.mappers.MealDtoMapper;
 import ynov.smartorder.api.web.mappers.ReservationDtoMapper;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -30,7 +30,7 @@ public class ReservationController implements ReservationsApi {
 
     @Override
     public ResponseEntity<List<ReservationDto>> reservationsAllGet() {
-        return ResponseEntity.ok(reservationRepository.FindAllReservation().stream().map(reservationMapper::toDto).toList());
+        return ResponseEntity.ok(reservationRepository.FindAllReservation().stream().map(reservationMapper::toDto).collect(Collectors.toList()));
     }
 
     @Override
@@ -42,7 +42,7 @@ public class ReservationController implements ReservationsApi {
     @Override
     public ResponseEntity<List<ReservationDto>> reservationsUserGet(UUID id) {
         reservationRepository.FindReservation(id);
-        return ResponseEntity.ok(reservationRepository.FindReservation(id).stream().map(reservationMapper::toDto).toList());
+        return ResponseEntity.ok(reservationRepository.FindReservation(id).stream().map(reservationMapper::toDto).collect(Collectors.toList()));
     }
 
     @Override
